--- a/doorWifi.html
+++ b/doorWifi.html
@@ -11,7 +11,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #f3f4f6;
+      background: #e5e7eb; /* 🔹 주간 모드: 조금 더 어두운 회색 */
       color: #222;
       min-height: 100vh;
       overflow-y: auto;
@@ -27,9 +27,9 @@
     .container {
       width: 100%;
       max-width: 380px;
-      background: #ffffff;
+      background: #f3f4f6; /* 🔹 기존 #ffffff → 살짝 어둡게 */
       border-radius: 18px;
-      box-shadow: 0 6px 18px rgba(0,0,0,0.14);
+      box-shadow: 0 6px 16px rgba(0,0,0,0.18);
       padding: 16px 16px 12px;
       display: flex;
       flex-direction: column;
@@ -74,7 +74,7 @@
       width: 30px; height: 30px;
       border-radius: 50%;
       border: none;
-      background: #e5e7eb;
+      background: #d1d5db; /* 🔹 좀 더 어두운 회색 */
       display: flex;
       align-items: center;
       justify-content: center;
@@ -92,14 +92,14 @@
     .subtitle {
       text-align: center;
       font-size: 0.78rem;
-      color: #666;
+      color: #555;
       margin-bottom: 16px;
     }
     body.night-mode .subtitle { color: #9ca3af; }
 
     .card {
       border-radius: 14px;
-      background: #f5f5f7;
+      background: #e5e7eb; /* 🔹 기존 #f5f5f7 → 한 톤 어둡게 */
       padding: 12px;
       margin-bottom: 10px;
       transition: background 0.25s ease;
@@ -115,7 +115,7 @@
     }
     .status-text-group { display: flex; flex-direction: column; gap: 4px; }
     .status-line { display: flex; align-items: center; gap: 6px; }
-    .status-label { font-size: 0.8rem; color: #555; }
+    .status-label { font-size: 0.8rem; color: #444; } /* 🔹 조금 더 진하게 */
     body.night-mode .status-label { color: #9ca3af; }
 
     .status-pill {
@@ -124,7 +124,7 @@
       border-radius: 999px;
       font-size: 0.78rem;
       font-weight: 600;
-      background: #e5e5ea;
+      background: #d4d4d8; /* 🔹 기존 #e5e5ea → 조금 더 어둡게 */
       color: #333;
     }
     .status-pill.ok  { background: #c8f2d5; color: #1a7f3b; }
@@ -142,10 +142,10 @@
       font-size: 0.78rem;
       font-weight: 700;
       border-radius: 999px;
-      border: 1px solid #ef4444;   /* 레드 아웃라인 */
+      border: 1px solid #ef4444;
       cursor: pointer;
-      background: #e5e7eb;         /* 다크 그레이 계열(연한 회색) */
-      color: #111827;              /* 블랙에 가까운 진회색 글자 */
+      background: #d1d5db;  /* 🔹 기존 #e5e7eb → 어둡게 */
+      color: #111827;
       box-shadow: 0 2px 4px rgba(0,0,0,0.12);
       white-space: nowrap;
       transition:
@@ -156,7 +156,7 @@
         color 0.15s ease;
     }
     .reset-btn:hover {
-      background: #f9fafb;
+      background: #e5e7eb;
       border-color: #dc2626;
       color: #111827;
       box-shadow: 0 3px 6px rgba(0,0,0,0.18);
@@ -203,20 +203,24 @@
       gap: 4px;
     }
     .threshold-input {
-      width: 70px; /* 4자리 */
+      width: 70px;
       font-size: 0.8rem;
       padding: 3px 6px;
       border-radius: 6px;
-      border: 1px solid #d4d4d8;
+      border: 1px solid #9ca3af; /* 🔹 테두리 살짝 진하게 */
       text-align: right;
+      background: #f9fafb;
     }
     .threshold-btn {
       font-size: 0.75rem;
       padding: 4px 10px;
       border-radius: 999px;
       border: none;
-      background: #e5e7eb;
+      background: #d1d5db; /* 🔹 어둡게 */
       cursor: pointer;
+    }
+    .threshold-btn:hover {
+      background: #e5e7eb;
     }
     body.night-mode .threshold-input {
       background: #020617;
@@ -240,11 +244,12 @@
       border-radius: 24px;
       border: none;
       cursor: pointer;
-      background: linear-gradient(145deg, #60a5fa, #2563eb);
+      /* 🔹 주간 모드: 블루 톤을 한 단계 어둡게 */
+      background: linear-gradient(145deg, #4f8ff9, #1d4ed8);
       color: #fff;
       box-shadow:
-        0 8px 16px rgba(15, 23, 42, 0.35),
-        inset 0 2px 3px rgba(255, 255, 255, 0.25);
+        0 8px 16px rgba(15, 23, 42, 0.4),
+        inset 0 2px 3px rgba(255, 255, 255, 0.2);
       transition:
         transform 0.1s ease,
         box-shadow 0.1s ease,
@@ -253,20 +258,20 @@
         filter 0.2s ease;
     }
     .led-btn:hover {
-      background: linear-gradient(145deg, #3b82f6, #2563eb);
+      background: linear-gradient(145deg, #3b82f6, #1d4ed8);
     }
     .led-btn:active {
       transform: translateY(2px);
       box-shadow:
-        0 4px 10px rgba(15, 23, 42, 0.6),
-        inset 0 1px 2px rgba(0, 0, 0, 0.25);
+        0 4px 10px rgba(15, 23, 42, 0.7),
+        inset 0 1px 2px rgba(0, 0, 0, 0.3);
       opacity: 0.97;
     }
     .led-btn.clicked {
       filter: brightness(1.05);
       box-shadow:
-        0 0 0 4px rgba(37,99,235,0.30),
-        0 12px 20px rgba(15, 23, 42, 0.55);
+        0 0 0 4px rgba(37,99,235,0.35),
+        0 12px 20px rgba(15, 23, 42, 0.6);
     }
     body.night-mode .led-btn {
       background: linear-gradient(145deg, #1d4ed8, #1e3a8a);
@@ -297,16 +302,16 @@
       border-radius: 12px;
       font-weight: 700;
       color: #ffffff;
-      background: #2f3d4f;
+      background: #374151;
     }
     .door-state-badge.door-open { background: #0b8f2f; }
-    .door-state-badge.door-close { background: #2f3d4f; }
+    .door-state-badge.door-close { background: #374151; }
     body.night-mode .door-state-badge.door-open { background: #16a34a; }
 
     .footer {
       margin-top: 8px;
       font-size: 0.72rem;
-      color: #777;
+      color: #555;
       line-height: 1.45;
     }
     .footer-row {
@@ -422,7 +427,7 @@
     const thresholdApply   = document.getElementById("threshold-apply");
 
     let lastDataTime  = 0;
-    let isNightMode   = true;   // ✅ 기본 야간 모드
+    let isNightMode   = true;   // 기본 야간
     let luxThreshold  = null;
     const originalLedLabel = ledButton.textContent;
 
@@ -590,7 +595,7 @@
 
     setInterval(updateDeviceStatus, 5000);
 
-    applyMode();  // ✅ 처음부터 야간 모드 반영
+    applyMode();
     connectMQTT();
   </script>
 </body>
