--- a/doorSet.html
+++ b/doorSet.html
@@ -11,7 +11,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
-      background: #e5e7eb;  /* 주간: 어둡게 */
+      background: #e5e7eb;
       color: #222;
       min-height: 100vh;
       overflow-y: auto;
@@ -133,14 +133,36 @@
       box-shadow: 0 2px 8px rgba(248, 113, 113, 0.6);
     }
 
+    /* =========================================================
+       ✅ 카드(3영역) 입체감 개선 (주간/야간)
+       - 주간: 뉴모피즘(그라데이션 + 양방향 그림자)
+       - 야간: 그레이 윤곽선 + 미세 그라데이션 + 하이라이트 + 섀도우
+       ========================================================= */
     .card {
       border-radius: 14px;
-      background: #e5e7eb;
       padding: 12px;
       margin-bottom: 8px;
-      transition: background 0.25s ease;
+
+      /* 주간 입체감 */
+      background: linear-gradient(145deg, #f0f2f5, #d9dde4);
+      border: 1px solid rgba(255,255,255,0.55);
+      box-shadow:
+        10px 10px 22px rgba(17, 24, 39, 0.18),
+        -10px -10px 22px rgba(255, 255, 255, 0.90),
+        inset 0 1px 0 rgba(255, 255, 255, 0.65);
+
+      transition: background 0.25s ease, box-shadow 0.25s ease, border-color 0.25s ease;
     }
-    body.night-mode .card { background: #111827; }
+
+    body.night-mode .card {
+      background: linear-gradient(145deg, #0f172a, #0a1222);
+      border: 1px solid rgba(148, 163, 184, 0.34);
+      box-shadow:
+        0 14px 28px rgba(0, 0, 0, 0.55),
+        0 -2px 10px rgba(148, 163, 184, 0.08),
+        inset 0 1px 0 rgba(255, 255, 255, 0.05),
+        inset 0 -1px 0 rgba(0, 0, 0, 0.35);
+    }
 
     .status-row {
       display: flex;
@@ -381,9 +403,7 @@
       background: #d4d4d8;
       margin: 4px 0;
     }
-    body.night-mode .divider {
-      background: #1f2937;
-    }
+    body.night-mode .divider { background: #1f2937; }
 
     #wifi-panel, #lora-panel { width: 100%; }
     #lora-panel { display: none; }
@@ -394,6 +414,7 @@
     }
   </style>
 </head>
+
 <body class="night-mode">
   <div class="container">
     <div class="header-row">
@@ -597,9 +618,8 @@
 
     let lastDataNode = 0;
     let lastDataGw   = 0;
-    let luxThreshold = null;   // 기준값 (lx)
+    let luxThreshold = null;
 
-    /* Door 상태 업데이트 헬퍼 */
     function updateDoorNode(isOpen) {
       doorNodeBadge.textContent = isOpen ? "Open" : "Close";
       doorNodeBadge.classList.remove("door-open", "door-close");
@@ -680,7 +700,6 @@
     btnWifi.addEventListener("click", showWifi);
     btnLora.addEventListener("click", showLora);
 
-    // 숫자만, 최대 4자리 유지
     function attachThresholdSanitizer(inputEl) {
       inputEl.addEventListener("input", () => {
         let v = inputEl.value.replace(/\D/g, "");
@@ -743,11 +762,7 @@
         if (!isNaN(v)) {
           const iv = Math.round(v);
           luxNodeEl.textContent = iv + " [lx]";
-          // 기준값이 설정되어 있으면 → 여기서 Door상태 결정
-          if (luxThreshold != null) {
-            const isOpen = iv > luxThreshold;  // iv > threshold → Open
-            updateDoorNode(isOpen);
-          }
+          if (luxThreshold != null) updateDoorNode(iv > luxThreshold);
         } else {
           luxNodeEl.textContent = payload + " [lx]";
         }
@@ -756,11 +771,7 @@
         lastUpdateNodeEl.textContent = new Date().toLocaleString();
 
       } else if (topic === N_TOP_LUX_STATE) {
-        // 기준값을 아직 못 받은 상태일 때만 lux_state 사용
-        if (luxThreshold == null) {
-          const isOpen = (payload === "OPEN");
-          updateDoorNode(isOpen);
-        }
+        if (luxThreshold == null) updateDoorNode(payload === "OPEN");
         lastDataNode = Date.now();
         updateDeviceStatusNode();
         lastUpdateNodeEl.textContent = new Date().toLocaleString();
@@ -774,10 +785,7 @@
         if (!isNaN(v)) {
           const iv = Math.round(v);
           luxGwEl.textContent = iv + " [lx]";
-          if (luxThreshold != null) {
-            const isOpen = iv > luxThreshold;
-            updateDoorGw(isOpen);
-          }
+          if (luxThreshold != null) updateDoorGw(iv > luxThreshold);
         } else {
           luxGwEl.textContent = payload + " [lx]";
         }
@@ -786,10 +794,7 @@
         lastUpdateGwEl.textContent = new Date().toLocaleString();
 
       } else if (topic === G_TOP_LUX_STATE) {
-        if (luxThreshold == null) {
-          const isOpen = (payload === "OPEN");
-          updateDoorGw(isOpen);
-        }
+        if (luxThreshold == null) updateDoorGw(payload === "OPEN");
         lastDataGw = Date.now();
         updateDeviceStatusGw();
         lastUpdateGwEl.textContent = new Date().toLocaleString();
@@ -848,10 +853,7 @@
     }
 
     ledBtnNode.addEventListener("click", function () {
-      if (!client.isConnected()) {
-        alert("MQTT 연결이 되지 않았습니다.");
-        return;
-      }
+      if (!client.isConnected()) { alert("MQTT 연결이 되지 않았습니다."); return; }
       ledBtnNode.classList.add("clicked");
       ledBtnNode.textContent = "명령 전송";
       setTimeout(() => {
@@ -865,10 +867,7 @@
     });
 
     resetBtnNode.addEventListener("click", function () {
-      if (!client.isConnected()) {
-        alert("MQTT 연결이 되지 않았습니다.");
-        return;
-      }
+      if (!client.isConnected()) { alert("MQTT 연결이 되지 않았습니다."); return; }
       const ok = confirm("Node를 소프트 리셋할까요?");
       if (!ok) return;
       const msg = new Paho.Message("RESET_NODE");
@@ -877,10 +876,7 @@
     });
 
     ledBtnGw.addEventListener("click", function () {
-      if (!client.isConnected()) {
-        alert("MQTT 연결이 되지 않았습니다.");
-        return;
-      }
+      if (!client.isConnected()) { alert("MQTT 연결이 되지 않았습니다."); return; }
       ledBtnGw.classList.add("clicked");
       ledBtnGw.textContent = "명령 전송";
       setTimeout(() => {
@@ -894,10 +890,7 @@
     });
 
     resetBtnGw.addEventListener("click", function () {
-      if (!client.isConnected()) {
-        alert("MQTT 연결이 되지 않았습니다.");
-        return;
-      }
+      if (!client.isConnected()) { alert("MQTT 연결이 되지 않았습니다."); return; }
       const ok = confirm("Gateway와 Node를 순차적으로 재시작할까요?");
       if (!ok) return;
       const msg = new Paho.Message("SOFT_RESET");
